--- a/style.css
+++ b/style.css
@@ -1,45 +1,28 @@
-body{
-
-background-color: rgb(235, 129, 36);
-
-
-}
-#sketch_heading{
-
-color: rgb(60, 57, 248);
-font-size: 30;
-
-}
 #header{
 
-    background-color: rgb(89, 89, 245);
-    color: whitesmoke;
-    padding: 10px;
-    margin-bottom: 0;
+background-color: rgb(89, 89, 245);
+color: whitesmoke;
+padding: 10px;
+margin: 0;
 
 }
-
-#score{
-
-font-size: 30;
-margin-right: 1300px;
-
-}
-
-#timer{
-
-font-size: 30;
+#Show_sketch{
 float: right;
-margin-right: 60px;
+
+}
+
+body{
+
+background-color: rgb(181, 235, 181);
 
 }
 
 canvas{
 
-    background-color: whitesmoke;
-    margin-top: 150px;
-    border: 2px ridge blue;
-    border-radius: 50px;
-    box-shadow:2px 2px 10px rgb(1, 206, 203);
-    
-    }
+background-color: whitesmoke;
+margin-top: 130px;
+border: 2px ridge blue;
+border-radius: 50px;
+box-shadow:2px 2px 10px rgb(1, 206, 203);
+
+}
